# crud_fastAPI_pokemon

./: crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  sql_app.db
